# AirCubeMetricsAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish-ghcr.yml
aircube_metrics_api/: __init__.py  api.py  main.py  mcp.py  storage.py
docs/superpowers/plans/: 2026-07-08-sqlmodel-storage-query.md
tests/: test_api.py  test_main.py  test_mcp.py  test_storage.py
